[metadata]
name = pyDANETLSA
version = 0.0.1
description = Python library to generate a TLSA record format based on the active certificate on a host.
author = Oscar Koeroo
author_email = okoeroo@gmail.com
url = https://github.com/okoeroo


[options]
packages = pyDANETLSA
install_requires = 
    imaplib
    poplib
    smtplib
    hashlib
    ssl
    pyOpenSSL
